[tool.poetry]
name = "curso-iri"
version = "0.1.0"
description = ""
authors = ["fccoelho <fccoelho@gmail.com>"]
license = "CC-BY-NC"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.7"
spacy = "^3.4.1"
gensim = "^4.2.0"
elasticsearch = "^8.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
